knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Account__c.field-meta.xml
<CustomField>
    <fullName>cm_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The borrower relationship.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Action Staging</relationshipLabel>
    <relationshipName>C360_Action_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>