knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Action_Id__c.field-meta.xml
<CustomField>
    <fullName>cm_Action_Id__c</fullName>
    <description>Registry action id (A27.2), e.g. collateral-valuation. The single source of truth that ties panel schema, suggestion rules and tool contract together.</description>
    <label>Action Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>