knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Actor_User__c.field-meta.xml
<CustomField>
    <fullName>cm_Actor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The identity that ran stage_*. Recorded for actorStamp() ledger attribution (A33.5.8).</description>
    <label>Staged By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Staged Actions</relationshipLabel>
    <relationshipName>C360_Staged_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>