knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>cm_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The named human bound to the decision token. Not a credit approver: the token proves confirmation of a plan, never a credit decision (A33.5.4).</description>
    <label>Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Confirmed Actions</relationshipLabel>
    <relationshipName>C360_Confirmed_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>