knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Decision_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>cm_Decision_Token_Hash__c</fullName>
    <description>SHA-256 of token + planHash + approver user id. The raw token is never stored (A33.5.4).</description>
    <label>Decision Token Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>