knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Executed_At__c.field-meta.xml
<CustomField>
    <fullName>cm_Executed_At__c</fullName>
    <description>When the execute phase last ran.</description>
    <label>Executed At</label>
    <type>DateTime</type>
</CustomField>