knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>cm_Idempotency_Key__c</fullName>
    <description>Client-generated, stable across resume (A33.5.2). Enforced by us, never assumed from the platform (A33.3.5).</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>