knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Plan_Hash__c.field-meta.xml
<CustomField>
    <fullName>cm_Plan_Hash__c</fullName>
    <description>SHA-256 over the ordered steps plus resolved field values. Immutable. execute_* refuses a mismatch (A33.5.3).</description>
    <label>Plan Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>