knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Plan_JSON__c.field-meta.xml
<CustomField>
    <fullName>cm_Plan_JSON__c</fullName>
    <description>The full staged output: summary, typed steps (A33.3.2), warnings, suggestions with asOf and policyVersion, and per-field provenance including NarrativeAttribution (A33.5.3).</description>
    <label>Plan JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>