knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Product_Package__c.field-meta.xml
<CustomField>
    <fullName>cm_Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal anchor and the A33.3.6 deep-link target.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Action Staging</relationshipLabel>
    <relationshipName>C360_Action_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>