knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Result_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>cm_Result_Record_Id__c</fullName>
    <description>Id of the domain record execute_* created. Empty on a staged-only record, because stage_* creates nothing (A33.5.3).</description>
    <label>Result Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>