knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Status__c.field-meta.xml
<CustomField>
    <fullName>cm_Status__c</fullName>
    <description>Action-level terminal state derived per A33.3.3: success when every step is verified or a deliberate handoff, partial when some verified and some not, failed when the first write failed with nothing verified.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Staged</fullName><default>true</default><label>Staged</label></value>
            <value><fullName>Executing</fullName><default>false</default><label>Executing</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Partial</fullName><default>false</default><label>Partial</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>