knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Token_Consumed_At__c.field-meta.xml
<CustomField>
    <fullName>cm_Token_Consumed_At__c</fullName>
    <description>Set the moment the decision token is redeemed. Non-null means the token is spent; a second execute_* is refused (A33.5.4 single use).</description>
    <label>Token Consumed At</label>
    <type>DateTime</type>
</CustomField>