knowledge/sf-build-v2/wp2/objects/cm_Action_Staging__c/fields/cm_Tracker_JSON__c.field-meta.xml
<CustomField>
    <fullName>cm_Tracker_JSON__c</fullName>
    <description>Live per-step tracker state (A33.3.3). This record is the authority; the client copy is a cache.</description>
    <label>Tracker JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>